# d3d9

./: LICENSE  README.md  add_git_to_path.bat  setup.cfg  verify_git_setup.bat
d3d9/: __inti__.py  module.py
mypackage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
