[metadata]
name = d3d9
version = 0.0.2
author = liaobin
author_email = liaobin15863049682@outlok.com
description = A short description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/liaobin-org-ai-org/d3d9
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests>=2.25.1